2003-11-28 F@lk Brettschneider <falkbr@kdevelop.org>
   * old IDEAl look for toolview-buttons is back in IDEAl mode
   
2003-11-20 F@lk Brettschneider <falkbr@kdevelop.org>
   * latest sync with KMdi of kdelibs-cvsHead (fixes some crashes)
   * enabled kmdiguiclient.h/cpp for KDE less version 3.2 too
   (-> this introduces KDE-accels Ctrl+Shift+Alt+L/R/B/T for IDEAl-docks and Ctrl+Alt+CursorLeft/CursorRight for cycling IDEAl-toolviews)
   * bugfix: proper names of View menu
   * now save the docking state to another section of kdeveloprc (to let people (who tried KMdi alpha versions) escape a vicious cycle)

2003-11-16 Mario Scalas <marioscalas@agilemovement.it>
    * Version control color feedback for the file view (currently implemented 
      by vcs/cvsservice plugin only).

2003-11-13 Amilcar Lucas <a.lucas@tu-bs.de>
    * Readded a even cleaner kdevelop.kdevelop file.
    PLEASE do _not_ commit changes to this file.
    We have until mid January 2004 to make the necessary code changes that create a more "cvs friendly" file by moving some of the options to the .kdevses file.
    For info on how to do it, read:
    http://developer.kde.org/documentation/library/cvs-api/kdevelop/html/howToAddPlugins.html
    I think this is very important fo the success of KDevelop3 in for developer teams (no man is an island!).
    Alexander and F@lk seam to agree with me on this one.

2003-11-09 F@lk Brettschneider <falkbr@kdevelop.org>
    * as planned and decided months ago, now I
      removed KDevelop's own special implementation of IDEAl UI mode.
      This has been replaced by KDE's IDEAl UI mode, globally implemented in kdelibs/kmdi.
      Now we increase maintainance, KDE-comformity and can switch all KDevelop UI modes on the fly.

2003-10-29 Alexander Dymo <cloudtemple@mksat.net>
    * Imported updated pascal parser, it isn't restricted now to pascal-78.
      Most object pascal/delphi extensions are supported.

2003-10-17 Dominik Haumann <dhdev@gmx.de>